...
    <string name="common_move_up">Move Up</string>
    <string name="common_move_down">Move Down</string>
    <string name="common_reset">Reset</string>
    <string name="common_ok">OK</string>
    <string name="common_retry">Retry</string>
    <string name="common_pray">Pray</string>
    <string name="common_next">Next</string>
    <string name="common_finish">Finish</string>
    <string name="common_install">Install</string>
    <string name="common_update">Update</string>
    <string name="common_installed">Installed</string>
    <string name="common_settings">Settings</string>
    <string name="common_about">About</string>
...
    <string name="jp_times_prefix">× %1$d</string>
    <string name="jp_favorite_name">Jesus Prayer %1$s (%2$s)</string>

    <!-- Prayer step flow -->
    <string name="flow_back">Back</string>
    <string name="flow_step_of">%1$d of %2$d</string>
    <string name="flow_show_transliteration">Show Transliteration</string>
    <string name="flow_prayer_language">Prayer Language</string>
    <string name="flow_app_setting">App Setting</string>
    <string name="flow_day">Day</string>
    <string name="flow_choose_form">Choose form</string>
    <string name="flow_resume_title">Continue this prayer?</string>
    <string name="flow_resume_message">You stopped at step %1$d of %2$d.</string>
...
